--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,42 @@
 		max-height:20px;
 	    }
 	</style>
+	
+	<link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
+	<script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+	<script src="//code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
+	
+	<script type="text/javascript">
+	$(function() {
+	    $("#autocomplete").autocomplete({
+		source:function(request, response) {
+		    $.getJSON("{{url_for('autocomplete')}}",{
+			q: request.term, // in flask, "q" will be the argument to look for using request.args
+		    }, function(data) {
+			response(data.matching_results); // matching_results from jsonify
+		    });
+		},
+		minLength: 2,
+		select: function(event, ui) {
+		    console.log(ui.item.value); // not in your question, but might help later
+		}
+	    });
+	})
+
+	</script>
+	
+	<script type="text/javascript">
+	$( function() {
+	    var availableTags = [
+		{% for product in products %}
+		"{{product.name}}",
+		{% endfor %}
+	    ];
+	    $( "#autocomplete2" ).autocomplete({
+		source: availableTags
+	    });
+	} );
+	</script>
     </head>
     <title>SpesaApp</title>
     <body>
@@ -70,7 +106,7 @@
 		<button class="btn btn-warning" type="submit">
 		    <img src="{{url_for('static', filename='add-icon.png')}}"/>
 		</button>
-		<input type="text" class="form-control input3" name="name" placeholder="Product" required>
+		<input id="autocomplete2" type="text" class="form-control input3" name="name" placeholder="Product" required>
 		<input type="text" class="form-control input3" name="quantity" placeholder="Quantity: 1" required>
 		<input type="text" class="form-control input3" name="category" placeholder="Category: 0" required>
 	    </form>
