--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <head>
+	{% block head %}
 	<style>
 	    .button1 {
 		background-image: url("{{url_for('static', filename='Accept-icon.png')}}");
@@ -41,8 +42,8 @@
 		max-height:20px;
 	    }
 	    .input5 {
-		font-size:12px; 
 		max-width:40px; 
+		font-size:12px; 
 		max-height:20px;
 	    }
 	    .input6 {
@@ -54,6 +55,7 @@
 		max-width:10px; 
 		max-height:20px;
 	    }
+	    tr:nth-child(even) {background-color: #f2f2f2;}
 	</style>
 	
 	<link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
@@ -61,17 +63,16 @@
 	<script src="//code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
 	
 	<script type="text/javascript">
+	$(document).ready(function() {
+	  $('.submit_on_enter').keydown(function(event) {
+	    // enter has keyCode = 13, change it if you want to use another button
+	    if (event.keyCode == 13) {
+	      this.form.submit();
+	      return false;
+	    }
+	  });
+	});
 	$( function() {
-	    var availableTags = [
-		{% for product in products %}
-		{
-		    id: "{{product.id}}",
-		    label: "{{product.name}}", 
-		    quantity: "{{product.quantity}}",
-		    category: "{{product.category}}",
-		},
-		{% endfor %}
-	    ];
 	    var categoryTags = [
 		{
 		    label: "Varie",
@@ -143,11 +144,24 @@
 		    document.getElementById('category').value=ui.item.category;
 		}
 	    });
-	    $( "#category" ).autocomplete({
-		source: categoryTags,
+	    $('.category').on("focus", function(){
+		  $(this).autocomplete({
+		   source: categoryTags
+		    });
 	    });
+	    var availableTags = [
+		{% for product in products %}
+		{
+		    id: "{{ product.id }}",
+		    label: "{{ product.name|safe }}", 
+		    quantity: "{{ product.quantity }}",
+		    category: "{{ product.category }}",
+		},
+		{% endfor %}
+	    ];
 	} );
 	</script>
+	{% endblock %}
     </head>
     <title>SpesaApp</title>
     <body>
@@ -160,29 +174,30 @@
 		</a>
 	    </div>
 	</nav>
-	{% for product in spesa %}
-	    <div class="m-1 input-group mb-0" style="font-size:8px;">
-		<form action="{{product.id}}/take" method="POST" >
-		    <button class="btn btn-success button1" type="submit"></button>
-		</form>
-		<input class="form-control input1" type="text" value="{{product.name}}" disabled>
-		<form action="{{product.id}}/update" method="POST">
-		    <input type="text" name="quantity" class="form-control input2" value="{{product.quantity}}">
-		</form>
-		<input type="text" class="form-control input5" name="category" value="{{product.category}}" disabled>
-	    </div>
-	{% endfor %}
 	<div class="my-3 mx-1">
 	    <form action="new" method="POST" class="input-group mb-1">
 		<button class="btn btn-warning" type="submit">
 		    <img src="{{url_for('static', filename='add-icon.png')}}"/>
 		</button>
 		<input type="hidden" id="id" name="id" value="-1">
-		<input type="text" id="autocomplete" class="form-control input3" name="name" placeholder="Product" required>
+		<input type="text" id="autocomplete" class="form-control input3" name="name" placeholder="Product">
 		<input type="text" id="quantity" class="form-control input6" name="quantity" placeholder="Q: 1" required>
-		<input type="text" id="category" class="form-control input6" name="category" placeholder="C: 0" required>
+		<input type="text" id="category" class="form-control input6 category" name="category" placeholder="C: 0" required>
 	    </form>
 	</div>
+	{% for product in spesa %}
+	    <div class="m-1 input-group mb-0" style="font-size:8px;">
+		<form action="{{product.id}}/take" method="POST">
+		    <button class="btn btn-success button1" type="submit"></button>
+		</form>
+		<input class="input1" type="text" value="{{product.name}}" disabled>
+		<form action="{{product.id}}/update" method="POST">
+		    <input type="text" name="quantity" class="input2 submit_on_enter" value="{{product.quantity}}">
+		    <input type="text" name="category" class="input5 submit_on_enter category" value="{{product.category}}">
+		</form>
+	    </div>
+	{% endfor %}
+	<hr>
 	{% for product in products %}
 	    {% if product.count > 0 %}
 		<form action="{{product.id}}/add" method="POST">
