--- a/templates/index.html
+++ b/templates/index.html
@@ -135,15 +135,6 @@
 		    value: 75,
 		},
 	    ];
-	    $( "#autocomplete" ).autocomplete({
-		source: availableTags,
-		select: function(event, ui) {
-		    //console.log(ui.item.id); // not in your question, but might help later
-		    document.getElementById('id').value=ui.item.id;
-		    document.getElementById('quantity').value=ui.item.quantity;
-		    document.getElementById('category').value=ui.item.category;
-		}
-	    });
 	    $('.category').on("focus", function(){
 		  $(this).autocomplete({
 		   source: categoryTags
@@ -159,6 +150,15 @@
 		},
 		{% endfor %}
 	    ];
+	    $( "#autocomplete" ).autocomplete({
+		source: availableTags,
+		select: function(event, ui) {
+		    //console.log(ui.item.id); // not in your question, but might help later
+		    document.getElementById('id').value=ui.item.id;
+		    document.getElementById('quantity').value=ui.item.quantity;
+		    document.getElementById('category').value=ui.item.category;
+		}
+	    });
 	} );
 	</script>
 	{% endblock %}
@@ -182,7 +182,7 @@
 		<input type="hidden" id="id" name="id" value="-1">
 		<input type="text" id="autocomplete" class="form-control input3" name="name" placeholder="Product">
 		<input type="text" id="quantity" class="form-control input6" name="quantity" placeholder="Q: 1" required>
-		<input type="text" id="category" class="form-control input6 category" name="category" placeholder="C: 0" required>
+		<input type="text" id="category" class="form-control input6" name="category" placeholder="C: 0" required>
 	    </form>
 	</div>
 	{% for product in spesa %}
