Added number of elements

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
 	    <div class="container-fluid">
 		<a class="navbar-brand" href="#">
 		    <img src="https://cdn-icons-png.flaticon.com/512/3388/3388607.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-			SpesaApp
+			SpesaApp - v 1.0 - {{ spesa|length }} elements
 		</a>
 	    </div>
 	</nav>
