--- a/templates/index2.html
+++ b/templates/index2.html
@@ -176,11 +176,6 @@
 		font-size:12px;
 		max-width:50px; 
 	    }
-	    .input7 {
-		max-width:48px; 
-		font-size:12px; 
-		max-height:20px;
-	    }
 	    .s {
 		font-size:8px; 
 		max-width:10px; 
@@ -338,39 +333,36 @@
 		}
 	    });
 	} );
-	function add(e) {
-	    document.getElementById('add'+e).style.display = "none";
+	function take(e) {
 	    
-	    const url = e+"/add";
+	    document.getElementById('take'+e).style.display = "none";
+	    const url = e+"/take";
 	    const data = {
-		'quantity' : document.getElementById('add_quantity'+e).value,
-		'category' : document.getElementById('add_category'+e).value,
-		'name' : document.getElementById('add_name'+e).value,
 	    };
 	    const other_params = {
 		headers : { "content-type" : "application/json; charset=UTF-8" },
-		body: JSON.stringify({data}),
+		body : data,
 		method : "POST",
 		mode : "cors"
 	    };
 
 	    fetch(url, other_params)
-		.then(response => {
-		    if(response.redirected == true)
-		    {
-			window.location.reload();
-		    }
-		    else
-		    {
-			response.json().then((data) => 
+		.then(function(response) {
+		    //console.log("take response")
+		    //console.log(response)
+		    response.json().then((data) => 
 			    document.getElementById('num_elements').text = "SpesaApp - v 3.0 - " + data.num_take + " elements")
 			;
-		    }
-		}).catch(error => {
-		    //console.log("add error")
+
+		}).then(function(data) {
+		    //console.log("take data")
+		    //console.log(data)
+		}).catch(function(error) {
+		    //console.log("take error")
 		    //console.log(error)
 		});
 	    return true;
+	    
 	}
 	</script>
 	{% endblock %}
@@ -379,7 +371,7 @@
     <body>
 	<nav class="navbar navbar-dark bg-dark">
 	    <div class="container-fluid">
-		<a id="num_elements" class="navbar-brand" href="/spesa2">
+		<a id="num_elements" class="navbar-brand" href="/spesa">
 			SpesaApp - v 3.0 - {{ num_take }} elements
 		</a>
 	    </div>
@@ -395,6 +387,21 @@
 		<input type="text" id="category" class="form-control input6" name="category" placeholder="C: 0" required>
 	    </form>
 	</div>
+	{% for product in spesa %}
+	    {% set input_style = "input_take%d"|format((product.category | int(base=10))/5) %}
+	    {% if product.toTake == 1 %}
+	    <form action="javascript:void(0);" onsubmit="take({{product.id}})" id="take{{product.id}}" style="display:block">
+	    {% else %}
+	    <form action="javascript:void(0);" onsubmit="take({{product.id}})" id="take{{product.id}}" style="display:none">
+	    {% endif %}
+		<div class="m-1 input-group mb-0" style="font-size:8px;">
+		    <input class="btn btn-success button1" type="submit">
+		    <input class="form-control {{input_style}}" type="text" value="{{product.name}}" disabled>
+		    <input type="text" name="quantity" class="form-control input2 submit_on_enter" value="{{product.quantity}}" id="take_quantity{{product.id}}">
+		    <input type="text" name="category" class="form-control input5 submit_on_enter category" value="{{product.category}}" id="take_category{{product.id}}">
+		</div>
+	    </form>
+	{% endfor %}
 	<hr>
 	<form action="/update" id="update_form" method="POST">
 	    <input type="hidden" name="id"       id="id_form" value="-1">
@@ -402,25 +409,6 @@
 	    <input type="hidden" name="category" id="category_form" value="-1">
 	</form>
 
-	{% for product in spesa %}
-	    {% if product.count > 1 and product.toTake != 1 %}
-	    <form action="javascript:void(0);" onsubmit="add({{product.id}})" id="add{{product.id}}" style="display:block">
-	    {% else %}
-	    <form action="javascript:void(0);" onsubmit="add({{product.id}})" id="add{{product.id}}" style="display:none">
-	    {% endif %}
-		    <div class="m-1 input-group mb-0">
-			<button class="btn btn-primary button2" type="submit"></button>
-			<input class="form-control input1" type="text" name="name" value="{{product.name}}" id="add_name{{product.id}}">
-			<span class="input-group-text s">Q</span>
-			<input type="text" class="form-control input4" name="quantity" value="{{product.quantity}}" id="add_quantity{{product.id}}" required>
-			<span class="input-group-text s">C</span>
-			<input type="text" class="form-control input5" name="category" value="{{product.category}}" id="add_category{{product.id}}" required>
-			<span class="input-group-text s">#</span>
-			<input type="text" class="form-control input7" value="{{product.count}}">
-		    </div>
-		</form>
-	{% endfor %}
-	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
